Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
d38f7f74d (16.0)
Description
src\plugins\projectexplorer\projectexplorer.cpp
dd->m_buildForRunConfigAction = new Action(
Tr::tr("Build for &Run Configuration"), Tr::tr("Build for &Run Configuration \"%1\""),
Action::EnabledWithParameter, this);
dd->m_buildForRunConfigAction->setIcon(buildIcon);
cmd = ActionManager::registerAction(dd->m_buildForRunConfigAction,
"ProjectExplorer.BuildForRunConfig");
cmd->setAttribute(Command::CA_UpdateText);
cmd->setDescription(dd->m_buildForRunConfigAction->text());
mbuild->addAction(cmd, Constants::G_BUILD_BUILD);
does not escape "%{Device:Name}" to real name.