ProjectExplorer: Use expanded display name

... in "build for run config" action

Fixes: QTCREATORBUG-32350
Change-Id: Idf3c8acd6032fccc84d029acb357106d3eef3507
Reviewed-by: hjk <hjk@qt.io>